# LLM-Dou-Dizhu

./: .env.example  .gitignore  README.md  agent_system.py  cit.md  commit_message.txt  game_logic.py  pyproject.toml  requirements.txt
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/components/: card-component.tsx  hand-display.tsx  player-area.tsx  welcome-view.tsx
